Added some simple style for the elements

--- a/blog-preview-card-main/development/Index.html
+++ b/blog-preview-card-main/development/Index.html
@@ -16,6 +16,7 @@
 
   <body>
     <div class="blog_card">
+      <img src="\blog-preview-card-main\assets\images\illustration-article.svg" alt="">
       <div class="status">Learning</div>
 
       <div class="publish_date">Published 21 Dec 2023</div>
@@ -26,11 +27,11 @@
         content,and presentation
       </p>
     </div>
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Adham essam</a>.
+      >. Coded by <a href="#">Adham essam</a>. -->
     </div>
   </body>
 </html>
