--- a/blog-preview-card-main/development/Index.html
+++ b/blog-preview-card-main/development/Index.html
@@ -11,27 +11,41 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="\blog-preview-card-main\development\style.css"
+    <link
+      rel="stylesheet"
+      href="\blog-preview-card-main\development\style.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <div class="blog_card">
-      <img src="\blog-preview-card-main\assets\images\illustration-article.svg" alt="">
+      <img
+        src="\blog-preview-card-main\assets\images\illustration-article.svg"
+        alt=""
+      />
       <div class="status">Learning</div>
 
       <div class="publish_date">Published 21 Dec 2023</div>
 
-      <h2>HTML & CSS foundations</h2>
+      <a href="#">HTML & CSS foundations</a>
       <p class="description">
         These languages are the backbone of every website, defining structure,
         content,and presentation
       </p>
-    </div>
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Adham essam</a>. -->
+      <div class="author">
+        <img
+          class="avatar"
+          src="\blog-preview-card-main\assets\images\image-avatar.webp"
+          alt=""
+        />
+        <span>Greg Hooper</span>
+      </div>
     </div>
   </body>
 </html>
